Better build fix
        * loader/icon/SQLDatabase.cpp:
        (WebCore::SQLDatabase::authorizerFunction):  Definite works by 3.3.13



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26791 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-19  Brady Eidson  <beidson@apple.com>
 
+        Better build fix
+
+        * loader/icon/SQLDatabase.cpp:
+        (WebCore::SQLDatabase::authorizerFunction):  Definite works by 3.3.13
+
+2007-10-19  Brady Eidson  <beidson@apple.com>
+
         Build fix
 
         * loader/icon/SQLDatabase.cpp:
