Remove stray printfs
        * dom/Document.cpp:
        (WebCore::Document::Document):
        (WebCore::Document::~Document):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26793 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-19  Brady Eidson  <beidson@apple.com>
+
+        Remove stray printfs
+
+        * dom/Document.cpp:
+        (WebCore::Document::Document):
+        (WebCore::Document::~Document):
+
 2007-10-19  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Brady.
