--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-19  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Tim
+
+        Tiger's SQLite doesn't support CREATE TABLE IF NOT EXISTS :(
+
+        * storage/Database.cpp:
+        (WebCore::Database::performOpenAndVerify):
+        * storage/DatabaseTracker.cpp:
+        (WebCore::DatabaseTracker::DatabaseTracker):
+
 2007-10-19  Anders Carlsson  <andersca@apple.com>
 
         Release build fix.
