Reviewed by Brady.
        Make example actually work.
        
        * misc/DatabaseExample.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26800 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,5 +1,13 @@
 2007-10-19  Anders Carlsson  <andersca@apple.com>
 
+        Reviewed by Brady.
+        
+        Make example actually work.
+        
+        * misc/DatabaseExample.html:
+
+2007-10-19  Anders Carlsson  <andersca@apple.com>
+
         Reviewed by Adam.
 
         Update example.
