Reviewed by Mark Rowe.
        Fix a couple of exceptions for first time users.

        * misc/DatabaseExample.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26804 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-19  Timothy Hatcher  <timothy@apple.com>
+
+        Reviewed by Mark Rowe.
+
+        Fix a couple of exceptions for first time users.
+
+        * misc/DatabaseExample.html:
+
 2007-10-19  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Brady.
