2007-10-19  Alp Toker  <alp@atoker.com>
        Reviewed by Oliver.

        GTK+ build fix enabling the new local database storage feature.
        There is also a prospective Qt build fix.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26810 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,16 @@
+2007-10-19  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Oliver.
+
+        GTK+ build fix enabling the new local database storage feature.
+        There is also a prospective Qt build fix.
+
+        * WebCore.pro:
+        * bindings/js/JSDatabaseCustom.cpp:
+        * platform/gtk/FileSystemGtk.cpp:
+        (WebCore::pathByAppendingComponent):
+        (WebCore::makeAllDirectories):
+
 2007-10-19  Andrew Wellington  <proton@wiretapped.net>
 
         Reviewed by Brady Eidson.
