--- a/WebKit/gtk/ChangeLog
+++ b/WebKit/gtk/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-19  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Oliver.
+
+        GTK+ build fix enabling the new local database storage feature.
+        There is also a prospective Qt build fix.
+
+        * WebCoreSupport/ChromeClientGtk.cpp:
+        (WebKit::ChromeClient::runDatabaseSizeLimitPrompt):
+        * WebCoreSupport/ChromeClientGtk.h:
+
 2007-10-14  Jan Michael Alonzo  <jmalonzo@unpluggable.com>
 
         Reviewed by Adam.
