--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-19  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Oliver.
+
+        GTK+ build fix enabling the new local database storage feature.
+        There is also a prospective Qt build fix.
+
+        * WebCoreSupport/ChromeClientQt.cpp:
+        (WebCore::ChromeClientQt::runDatabaseSizeLimitPrompt):
+        * WebCoreSupport/ChromeClientQt.h:
+
 2007-10-19  Simon Hausmann  <hausmann@kde.org>
 
         Fix the Qt/Windows build: Include the moc file from the .cpp file so
