Fix the Qt build.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26815 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-20  Simon Hausmann  <hausmann@kde.org>
+
+        Build fix, not reviewed.
+
+        Fix the Qt build by adding the two missing FileSystem functions.
+
+        * platform/qt/FileSystemQt.cpp:
+        (WebCore::makeAllDirectories):
+        (WebCore::pathByAppendingComponent):
+
 2007-10-19  Alp Toker  <alp@atoker.com>
 
         Reviewed by Oliver.
