--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,16 @@
+2007-10-20  Darin Adler  <darin@apple.com>
+
+        Reviewed by Maciej.
+
+        - http://bugs.webkit.org/show_bug.cgi?id=15579
+          stop churning identifier reference counts copying Completion objects
+
+        * kjs/completion.h: Replace the Identifier with an Identifier*.
+        * kjs/nodes.cpp:
+        (ForInNode::execute): Update for change to Completion constructor.
+        (ContinueNode::execute): Ditto.
+        (BreakNode::execute): Ditto.
+
 2007-10-20  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Alp.
