2007-10-20  Eric Seidel  <eric@webkit.org>
        Reviewed by aroben.

        * Scripts/find-extra-includes: fix path matching regex to not match ".patch"


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26839 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,5 +1,11 @@
 2007-10-20  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by aroben.
+
+        * Scripts/find-extra-includes: fix path matching regex to not match ".patch"
+
+2007-10-20  Eric Seidel  <eric@webkit.org>
+
         Reviewed by darin.
         
         Add improved argument handling to run-sunspider, including
