--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,16 @@
+2007-10-21  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Dave Hyatt.
+
+        - test for http://bugs.webkit.org/show_bug.cgi?id=15259
+          <rdar://problem/5499902> REGRESSION: Text overflows when using word spacing and centering (affects myspace.com music videos page)
+
+        * fast/text/word-space.html: Added.
+        * platform/mac/fast/css/word-space-extra-expected.txt: Updated result.
+        * platform/mac/fast/text/word-space-expected.checksum: Added.
+        * platform/mac/fast/text/word-space-expected.png: Added.
+        * platform/mac/fast/text/word-space-expected.txt: Added.
+
 2007-10-20  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Dave Hyatt.
