--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,14 @@
 2007-10-21  Darin Adler  <darin@apple.com>
 
+        - fix Windows build
+
+        * kjs/array_instance.h: Removed unused ExecState parameter.
+        * kjs/array_object.cpp:
+        (KJS::ArrayInstance::put): Ditto.
+        (KJS::ArrayInstance::setLength): Ditto.
+
+2007-10-21  Darin Adler  <darin@apple.com>
+
         * kjs/array_object.cpp: (KJS::ArrayInstance::put):
         Add missing assignment that was causing regression test crash.
 
