--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,19 @@
+2007-10-21  David Kilzer  <ddkilzer@webkit.org>
+
+        Reviewed by Darin.
+
+        - fix http://bugs.webkit.org/show_bug.cgi?id=15592
+          DOM Exception opening up client-side database example for the first time
+
+        There was a race condition when creating the WebKitStickyNotes table for the
+        first time in which the loaded() function (renamed to loadNotes()) could be
+        called before the table was created.  Prevent this by only calling loadNotes()
+        in an executeSql() callback after we know the table exists, or after we know
+        the table has been created.
+
+        * misc/DatabaseExample.html: Renamed loaded() function to loadNotes().
+        Created a new loaded() function.
+
 2007-10-20  Mark Rowe  <mrowe@apple.com>
 
         Rubber-stamped by Adam.
